--- a/application/views/scripts/formulaire/partials/tableau/partial-tableau.phtml
+++ b/application/views/scripts/formulaire/partials/tableau/partial-tableau.phtml
@@ -2,7 +2,7 @@
     <tr <?php if ($this->hidden): ?>class='hidden'<?php endif ?>>
         <?php if ($this->canWrite): ?>
             <td class='tdMove'>
-                <i class="icon-move"></i>
+                <span class="glyphicon glyphicon-move" aria-hidden="true"></span>
             </td>
         <?php endif ?>
         <?php foreach ($colonneChamp as $valeur): ?>
