--- a/application/views/scripts/groupement/display.phtml
+++ b/application/views/scripts/groupement/display.phtml
@@ -40,8 +40,8 @@
 				</select>
 
                 <div class="pull-left btn-group btn-group-vertical" style='padding: 20px;'>
-                    <button id='add_ville' type="button" class="btn"><i class="icon-chevron-right"></i></button>
-                    <button id='remove_ville' type="button" class="btn"><i class="icon-chevron-left"></i></button>
+                    <button id='add_ville' type="button" class="btn"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
+                    <button id='remove_ville' type="button" class="btn"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></button>
                 </div>
 
 				<select id='villes_groupement' name='villes[]' class='pull-left' multiple size=20 style='height: 300px; width: 30%;'>
