--- a/application/views/scripts/index/partials/odj_bloc.phtml
+++ b/application/views/scripts/index/partials/odj_bloc.phtml
@@ -1,6 +1,6 @@
 <div id="<?php echo $this->id ?>" class="panel panel-default w2 empty folded">
   <div class="panel-heading">
-    <i class="icon icon-chevron-right"></i>
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     Ordre du jour des prochaines commissions
     <?= $this->title.' ('.($this->count ?? 0).')' ?>
 
