--- a/application/views/scripts/piece-jointe/export.phtml
+++ b/application/views/scripts/piece-jointe/export.phtml
@@ -1,6 +1,6 @@
 <li id="PIECESJOINTES" class="row-fluid" style="margin-bottom: 20px;" tabindex="0">
     <div class="span3 pull-left">
-        <i class="icon-warning-sign"></i>
+        <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
         Liste des pièces jointes pouvant être envoyées vers Plat'AU
     </div>
     <div class="span9">
