--- a/application/views/scripts/retablir/partials/partial-deleted-dossiers.phtml
+++ b/application/views/scripts/retablir/partials/partial-deleted-dossiers.phtml
@@ -85,7 +85,7 @@
                                 class='btn btn-small deleted-element__restore-button'
                                 href=<?= '/dossier/retablir-dossier/idDossier/'.$deletedElement['ID_DOSSIER'] ?>
                             >
-                                <i class="icon-ok icon-black"></i>
+                                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                                 Rétablir le dossier
                             </a>
                         </div>
