--- a/application/views/scripts/retablir/partials/partial-deleted-etablissements.phtml
+++ b/application/views/scripts/retablir/partials/partial-deleted-etablissements.phtml
@@ -46,7 +46,7 @@
                                 class='btn btn-small deleted-element__restore-button'
                                 href=<?= '/etablissement/retablir-etablissement/idEtablissement/'.$deletedElement['ID_ETABLISSEMENT'] ?>
                             >
-                                <i class="icon-ok icon-black"></i>
+                                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                                 Rétablir l'établissement
                             </a>
                         </div>
