--- a/application/views/scripts/statistiques/index.phtml
+++ b/application/views/scripts/statistiques/index.phtml
@@ -2,10 +2,10 @@
 <ul class="nav nav-tabs nav-stacked menu_dashboard" >
     <li class="nav-header">Actions</li>
     <li>
-    <a href="#" id="voir" style="display: none;"><i class="icon-search"></i>  Générer</a>
+    <a href="#" id="voir" style="display: none;"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>  Générer</a>
     </li>
     <li>
-    <a href="#" id="export" style="display: none;"><i class="icon-align-center"></i>  Exporter vers XML</a>
+    <a href="#" id="export" style="display: none;"><span class="glyphicon glyphicon-align-center" aria-hidden="true"></span>  Exporter vers XML</a>
     </li>
 </ul>
 <?php $this->placeholder('lateral_navigation')->captureEnd(); ?>
