--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -6,7 +6,7 @@
     <ul class="nav nav-tabs nav-stacked menu_dashboard" >
         <li class="<?= ($this->action == "index") ? "active" : "" ?>">
             <a href='<?= $this->url(array("controller" => "dossier", "id" => $this->idDossier), false, true) ?>'>
-                <i class="icon-info-sign icon-black"></i>
+                <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
                 Informations générales
             </a>
         </li>
@@ -14,7 +14,7 @@
         <?php if ($this->idTypeDossier == 1 && $this->natureDossier != 3 && $this->natureDossier != 9): ?>
             <li class='<?= ($this->action == "descriptif") ? "active" : "" ?>'>
                 <a href='<?= $this->url(array("controller" => "dossier", "action" => "descriptif", "id" => $this->idDossier), false, true) ?>'>
-                    <i class="icon-book icon-black"></i>
+                    <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
                     Descriptif <?php if ($this->natureDossier == 1 || $this->natureDossier == 2) ?> des travaux
                 </a>
             </li>
@@ -23,7 +23,7 @@
         <?php if ($this->idTypeDossier == 1 || $this->idTypeDossier == 2 || $this->idTypeDossier == 3): ?>
             <li class='<?= strpos($this->action, "textes-applicables") !== false ? "active" : "" ?>'>
                 <a href='<?= $this->url(array("controller" => "dossier", "action" => "textes-applicables", "id" => $this->idDossier), false, true) ?>'>
-                    <i class="icon-align-center icon-black"></i>
+                    <span class="glyphicon glyphicon-align-center" aria-hidden="true"></span>
                     Textes applicables
                 </a>
             </li>
@@ -32,7 +32,7 @@
         <?php if ($this->idTypeDossier != 5): ?>
             <li class = <?= $this->action == "docconsulte" ? "active" : "" ?>>
                 <a href= <?= $this->url(array("controller" => "dossier", "action" => "docconsulte", "id" => $this->idDossier), false, true) ?>>
-                    <i class="icon-file icon-black"></i>
+                    <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
                     Documents consultés
                 </a>
             </li>
@@ -41,7 +41,7 @@
         <?php if (($this->idTypeDossier === 2 || $this->idTypeDossier === 3) && $this->isAllowedVerificationsTechniques): ?>
             <li class="<?= strpos($this->action, 'verifications-techniques') !== false ? 'active' : '' ?>">
                 <a href= <?= $this->url(array("controller" => "dossier", "action" => "verifications-techniques", "id" => $this->idDossier), false, true) ?>>
-                    <i class="icon-th-list icon-black"></i>
+                    <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
                     Vérifications techniques
                 </a>
             </li>
@@ -50,7 +50,7 @@
         <?php if ($this->idTypeDossier === 1 && $this->isAllowedEffectifsDegagements): ?>
             <li class="<?= strpos($this->action, 'effectifs-degagements-dossier') !== false ? 'active' : '' ?>">
                 <a class='sep' href='<?= $this->url(array('action' => 'effectifs-degagements-dossier')) ?>' >
-                    <i class="icon-th-list icon-black"></i>
+                    <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
                     Effectifs et dégagements
                 </a>
             </li>
@@ -59,7 +59,7 @@
         <?php if ($this->idTypeDossier === 1 && $this->isAllowedAvisDerogation): ?>
             <li class="<?= strpos($this->action, 'avis-et-derogations') !== false ? 'active' : '' ?>">
                 <a href="<?= $this->url(['controller' => 'dossier', 'action' => 'avis-et-derogations', 'id' => $this->idDossier], false, true) ?>">
-                    <i class="icon-pencil icon-black"></i>
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     Avis et dérogations
 
                     <?php if($this->hasAvisDerogation): ?>
@@ -72,7 +72,7 @@
         <?php if (!in_array($this->natureDossier, [3, 5, 31, 32, 40, 41, 42, 44])): ?>
             <li class="<?= strpos($this->action, 'presc') !== false || in_array($this->action, ['edit', 'edit-type']) ? 'active' : '' ?>">
                 <a href='<?= $this->url(array("controller" => "dossier", "action" => "prescription", "id" => $this->idDossier), false, true) ?>'>
-                    <i class="icon-flag icon-black"></i>
+                    <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
                     Prescriptions
                 </a>
             </li>
@@ -80,7 +80,7 @@
 
         <li class='<?= strpos($this->action, "liees") !== false ? "active" : "" ?>'>
             <a href='<?= $this->url(array("controller" => "dossier", "action" => "liees", "id" => $this->idDossier), false, true) ?>'>
-                <i class="icon-folder-open icon-black"></i>
+                <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
                 Établissements et dossiers liés
             </a>
         </li>
@@ -88,7 +88,7 @@
         <?php if (!in_array($this->natureDossier, [40, 41, 42, 44])): ?>
             <li class='<?= ($this->action == "contact") ? "active" : "" ?>'>
                 <a href='<?= $this->url(array("controller" => "dossier", "action" => "contact", "id" => $this->idDossier), false, true) ?>'>
-                    <i class="icon-user icon-black"></i>
+                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                     Contacts
                 </a>
             </li>
@@ -96,7 +96,7 @@
 
         <li class='<?= ($this->action == "piece-jointe") ? "active" : "" ?>'>
             <a href='<?= $this->url(array("controller" => "dossier", "action" => "piece-jointe", "id" => $this->idDossier), false, true) ?>'>
-                <i class="icon-share icon-black"></i>
+                <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
                 Pièces jointes
             </a>
         </li>
@@ -116,12 +116,12 @@
         ?>
 
         <li>
-            <a class="sep" id="<?= $idLink; ?>" style='cursor:pointer;'><i class="icon-lock icon-black"></i> <?= $label; ?></a>
+            <a class="sep" id="<?= $idLink; ?>" style='cursor:pointer;'><span class="glyphicon glyphicon-lock" aria-hidden="true"></span> <?= $label; ?></a>
         </li>
 
         <li class='<?= ($this->action == "rapport") ? "active" : "read" ?>'>
             <a href='<?= $this->url(array("controller" => "dossier", "action" => "rapport", "id" => $this->idDossier), false, true) ?>'>
-                <i class="icon-book icon-black"></i>
+                <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
                 Rapport
             </a>
         </li>
@@ -138,12 +138,12 @@
             <li>
                 <?php if ($this->dossierSupprime) : ?>
                     <a id="retablissementDossier" href=<?= "/dossier/retablir-dossier/idDossier/". $this->idDossier ?>>
-                        <i class="icon-ok icon-black"></i>
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                         Rétablir le dossier
                     </a>
                 <?php else :?>
                     <a id="suppressionDossier" href="#">
-                        <i class="icon-remove icon-black"></i>
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                         Supprimer le dossier
                     </a>
                 <?php endif ?>
