--- a/application/layouts/etablissement.phtml
+++ b/application/layouts/etablissement.phtml
@@ -5,7 +5,7 @@
 <ul class='nav nav-tabs nav-stacked menu_dashboard'>
     <li class="<?= in_array($action_name, ['index', 'edit']) ? 'active' : '' ?>">
         <a href='<?= $this->url(array("action"=>"index")) ?>'>
-            <i class="icon-info-sign icon-black"></i>
+            <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
             Général
         </a>
     </li>
@@ -13,13 +13,13 @@
     <?php if ($this->etablissement['informations']['LIBELLE_GENRE'] != 'Site') : ?>
         <li class="<?= strpos($action_name, 'textes-applicables') !== false ? 'active' : '' ?>">
             <a href='<?= $this->url(array("action"=>"textes-applicables")) ?>'>
-                <i class="icon-align-center icon-black"></i>
+                <span class="glyphicon glyphicon-align-center" aria-hidden="true"></span>
                 Textes applicables
             </a>
         </li>
         <li class="<?= strpos($action_name, 'descriptif') !== false ? 'active' : '' ?>">
             <a href='<?= $this->url(array("action"=>"descriptif")) ?>'>
-                <i class="icon-book icon-black"></i>
+                <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
                 Descriptif
             </a>
         </li>
@@ -28,7 +28,7 @@
     <?php if ($this->isAllowedEffectifsDegagements): ?>
         <li class="<?= strpos($action_name, 'effectifs-degagements-etablissement') !== false ? 'active' : '' ?>">
             <a class='sep' href='<?= $this->url(array("action"=>"effectifs-degagements-etablissement")) ?>'>
-                <i class="icon-th-list icon-black"></i>
+                <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
                 Effectifs et dégagements
             </a>
         </li>
@@ -37,7 +37,7 @@
     <?php if ($this->isAllowedAvisDerogations): ?>
         <li class="<?= strpos($action_name, 'avis-derogations-etablissement') !== false ? 'active' : '' ?>">
             <a class='sep' href='<?= $this->url(array("action"=>"avis-derogations-etablissement")) ?>'>
-                <i class="icon-pencil icon-black"></i>
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 Avis et dérogations
 
                 <?php if($this->hasAvisDerogations): ?>
@@ -49,32 +49,32 @@
 
     <li class="<?= strpos($action_name, 'pieces-jointes') !== false ? 'active' : '' ?>">
         <a href='<?= $this->url(array("action"=>"pieces-jointes")) ?>'>
-            <i class="icon-share icon-black"></i>
+            <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
             Pièces jointes
         </a>
     </li>
     <li class="<?= $action_name == 'contacts' ? 'active' : '' ?>">
         <a href='<?= $this->url(array("action"=>"contacts")) ?>'>
-            <i class="icon-user icon-black"></i>
+            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
             Contacts
         </a>
     </li>
     <li class="<?= $action_name == 'dossiers' ? 'active' : '' ?>">
         <a href='<?= $this->url(array("action"=>"dossiers")) ?>'>
-            <i class="icon-folder-open icon-black"></i>
+            <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
             Dossiers
         </a>
     </li>
     <li class="<?= $action_name == 'historique' ? 'active' : '' ?>">
         <a class='sep' href='<?= $this->url(array("action"=>"historique")) ?>'>
-            <i class="icon-repeat icon-black"></i>
+            <span class="glyphicon glyphicon-repeat" aria-hidden="true"></span>
             Afficher l'historique
         </a>
     </li>
     <li class="nav-header">Actions</li>
     <li>
         <a href='<?= $this->url(array('controller' => 'dossier', 'action' => 'add', 'id_etablissement' => $this->etablissement['general']['ID_ETABLISSEMENT']), null, true)?> '>
-            <i class="icon-plus icon-black"></i>
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             Ajouter un dossier
         </a>
     </li>
@@ -82,7 +82,7 @@
     <?php if ($this->is_allowed_delete_etablissement): ?>
         <li>
             <a id="suppressionEtablissement" href="#">
-                <i class="icon-remove icon-black"></i>
+                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                 Supprimer l'établissement
             </a>
         </li>
