--- a/application/layouts/includes/nav-main.phtml
+++ b/application/layouts/includes/nav-main.phtml
@@ -9,14 +9,14 @@
             <a class="brand" href="/"><img src='/images/layout-header-logo.png' alt='Prevarisc'  /></a>
             <div class="nav-collapse collapse">
                 <ul class='nav'>
-                    <li><a href='/'><i class="icon-home grey-icn-plus" title="Accueil"></i></a></li>
+                    <li><a href='/'><span class="glyphicon glyphicon-home grey-icn-plus" aria-hidden="true" title="Accueil"></span></a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             Établissements
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href='/search/etablissement?label=&page=1'><i class="icon-th-list"></i> Rechercher</a></li>
-                            <li><a href='/etablissement/add'><i class="icon-plus"></i> Ajouter</a></li>
+                            <li><a href='/search/etablissement?label=&page=1'><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Rechercher</a></li>
+                            <li><a href='/etablissement/add'><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Ajouter</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -24,14 +24,14 @@
                             Dossiers
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href='/search/dossier?objet=&page=1'><i class="icon-th-list"></i>  Rechercher</a></li>
-                            <li><a href='/dossier/add'><i class="icon-plus"></i>  Ajouter</a></li>
+                            <li><a href='/search/dossier?objet=&page=1'><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>  Rechercher</a></li>
+                            <li><a href='/dossier/add'><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>  Ajouter</a></li>
                         </ul>
                     </li>
                     <li><a href='/calendrier-des-commissions'>Calendrier</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="icon-plus grey-icn-plus" title="Plus"></i>
+                            <span class="glyphicon glyphicon-plus grey-icn-plus" aria-hidden="true" title="Plus"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href='/statistiques'>Statistiques</a></li>
@@ -45,7 +45,7 @@
                             <div class="input-append" id="research-input">
                                 <input name="label" class="input-medium" id="nav-main-search-field" type="text" placeholder="Rechercher ..." style='margin-top: 10px' />
                                 <input name="page" type="hidden" value="1"  />
-                                <button class="btn btn_search" type="submit" style='margin-top: 10px'><i class="icon-search"></i> </button>
+                                <button class="btn btn_search" type="submit" style='margin-top: 10px'><span class="glyphicon glyphicon-search" aria-hidden="true"></span> </button>
                                 <a class="btn" href="/search/etablissement?&statuts%5B%5D=2&statuts%5B%5D=4" >Avancée »</a>
                             </div>
                         </form>
