--- a/application/layouts/menu_admin.phtml
+++ b/application/layouts/menu_admin.phtml
@@ -3,63 +3,63 @@
     <li class="nav-header">Général</li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'admin') echo "class='active'" ?> >
-        <a href='/admin' ><i class="icon-info-sign icon-black"></i> Informations</a>
+        <a href='/admin' ><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Informations</a>
     </li>
 
     <li class="nav-header">Gestion des entités</li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'retablir') echo "class='active'" ?> >
-        <a href='/retablir' ><i class="icon-ok icon-black"></i> Gestion des éléments supprimés</a>
+        <a href='/retablir' ><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Gestion des éléments supprimés</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'users') echo "class='active'" ?> >
-        <a href='/users/index' ><i class="icon-user icon-black"></i> Gestion des utilisateurs</a>
+        <a href='/users/index' ><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Gestion des utilisateurs</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'gestion-des-communes') echo "class='active'" ?> >
-        <a href='/gestion-des-communes' ><i class="icon-globe icon-black"></i> Gestion des communes</a>
+        <a href='/gestion-des-communes' ><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> Gestion des communes</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() === 'fusion-des-communes') echo "class='active'" ?> >
-        <a href='/fusion-des-communes' ><i class="icon-random icon-black"></i> Fusion des communes</a>
+        <a href='/fusion-des-communes' ><span class="glyphicon glyphicon-random" aria-hidden="true"></span> Fusion des communes</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'couches-cartographiques') echo "class='active'" ?> >
-        <a href='/couches-cartographiques/list' ><i class="icon-map-marker icon-black"></i> Gestion des couches cartographiques</a>
+        <a href='/couches-cartographiques/list' ><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Gestion des couches cartographiques</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'gestion-des-commissions') echo "class='active'" ?> >
-        <a href='/gestion-des-commissions' ><i class="icon-certificate icon-black"></i> Gestion des commissions</a>
+        <a href='/gestion-des-commissions' ><span class="glyphicon glyphicon-certificate" aria-hidden="true"></span> Gestion des commissions</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'gestion-des-documents') echo "class='active'" ?> >
-        <a href='/gestion-des-documents' ><i class="icon-file icon-black"></i> Gestion des documents</a>
+        <a href='/gestion-des-documents' ><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Gestion des documents</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'gestion-prescriptions') echo "class='active'" ?> >
-        <a href='/gestion-prescriptions' ><i class="icon-flag icon-black"></i> Gestion des prescriptions</a>
+        <a href='/gestion-prescriptions' ><span class="glyphicon glyphicon-flag" aria-hidden="true"></span> Gestion des prescriptions</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'gestion-textes-applicables') echo "class='active'" ?> >
-        <a href='/gestion-textes-applicables' ><i class="icon-align-center icon-black"></i> Gestion des textes applicables</a>
+        <a href='/gestion-textes-applicables' ><span class="glyphicon glyphicon-align-center" aria-hidden="true"></span> Gestion des textes applicables</a>
     </li>
 
     <li class="nav-header">Paramétrage du logiciel</li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'tableau-des-periodicites') echo "class='active'" ?> >
-        <a href='/tableau-des-periodicites' ><i class="icon-th icon-black"></i> Tableau des périodicités</a>
+        <a href='/tableau-des-periodicites' ><span class="glyphicon glyphicon-th" aria-hidden="true"></span> Tableau des périodicités</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'groupement') echo "class='active'" ?> >
-        <a href='/groupement' ><i class="icon-tags icon-black"></i> Groupements de communes</a>
+        <a href='/groupement' ><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Groupements de communes</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'changement') echo "class='active'" ?> >
-        <a href='/changement' ><i class="icon-bell icon-black"></i> Messages des alertes</a>
+        <a href='/changement' ><span class="glyphicon glyphicon-bell" aria-hidden="true"></span> Messages des alertes</a>
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'formulaire') echo "class='active'" ?> >
-        <a href='/formulaire' ><i class="icon-tasks icon-black"></i> Formulaires</a>
+        <a href='/formulaire' ><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> Formulaires</a>
     </li>
 </ul>
 
