--- a/application/views/scripts/dossier/results/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations.phtml
@@ -31,7 +31,7 @@
 
     <div class="pull-right">
         <a href="<?= $this->url(['controller' => 'dossier', 'action' => 'avis-et-derogations-edit', 'id' => $this->ID_DOSSIER, 'avis-derogation' => $this->ID_AVIS_DEROGATION], false, true) ?>">
-            <i class="icon-pencil icon-black"></i>
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </a>
     </div>
 </div>
