--- a/application/views/scripts/etablissement/edit-pieces-jointes.phtml
+++ b/application/views/scripts/etablissement/edit-pieces-jointes.phtml
@@ -1,6 +1,6 @@
 <div class='pull-right' >
-    <a id="addPJQuick" class="btn"><i class="icon-upload"></i> Ajout rapide</a>
-    <a href='<?php echo $this->url(array('action' => 'add-piece-jointe')) ?>' class="btn" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" ><i class="icon-upload"></i> Ajouter une pièce jointe</a>
+    <a id="addPJQuick" class="btn"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajout rapide</a>
+    <a href='<?php echo $this->url(array('action' => 'add-piece-jointe')) ?>' class="btn" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" ><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajouter une pièce jointe</a>
     <a class='btn' href="<?php echo $this->url(array('action' => 'pieces-jointes')) ?>">Revenir sur l'affichage des pièces jointes</a>
 </div>
 
