--- a/application/views/scripts/etablissement/partials/partial-modal-edit-adresse.phtml
+++ b/application/views/scripts/etablissement/partials/partial-modal-edit-adresse.phtml
@@ -41,7 +41,7 @@
 
             <dt>Géolocalisation</dt>
             <dd>
-                <?php if ($this->key_ign !== null) : ?><button id="geolocme" type='button' class='btn btn-small'><i class="icon-map-marker"></i> Géolocaliser cette adresse (Geoportail)</button><?php endif ?>
+                <?php if ($this->key_ign !== null) : ?><button id="geolocme" type='button' class='btn btn-small'><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Géolocaliser cette adresse (Geoportail)</button><?php endif ?>
                 <br/>
                 <small>Résultat : <span class='result'>Inconnu</span></small>
             </dd>
