--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -1,5 +1,5 @@
 <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'index'], null, true) ?>">
-    <i class="icon-arrow-left"></i>
+    <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
     Retourner sur la liste des formulaires
 </a>
 
@@ -78,7 +78,7 @@
                 <tbody id='grp1' class="grp">
                     <?php foreach($this->champs as $champ): ?>
                         <tr id=<?=$champ['ID_CHAMP']?>>
-                            <td class='tdMove'><i class="icon-move"></i></td>
+                            <td class='tdMove'><span class="glyphicon glyphicon-move" aria-hidden="true"></span></td>
                             <td><?= $champ['NOM'] ?></td>
                             <td>
                                 <?= $champ['TYPE'] ?>
