--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -49,12 +49,12 @@
                             <tbody id="capsule-rubrique-<?= $formulaire['ID_CAPSULERUBRIQUE']?>" class="grp">
                                 <?php foreach($formulaire['RUBRIQUES'] as $rubrique): ?>
                                     <tr id=<?=$rubrique['ID_RUBRIQUE']?>>
-                                        <td class='tdMove'><i class="icon-move"></i></td>
+                                        <td class='tdMove'><span class="glyphicon glyphicon-move" aria-hidden="true"></span></td>
                                         <td><?= $rubrique['NOM'] ?></td>
                                         <td id='default-display'>
                                             <?php if($rubrique['DISPLAY']): ?>
                                                 <div class="text-center">
-                                                    <i class="icon-ok"></i>
+                                                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                                                 </div>
                                             <?php endif ?>
                                         </td>
