--- a/application/views/scripts/formulaire/partials/tableau/partial-input-tableau.phtml
+++ b/application/views/scripts/formulaire/partials/tableau/partial-input-tableau.phtml
@@ -1,5 +1,5 @@
 <td class='tdMove'>
-    <i class="icon-move"></i>
+    <span class="glyphicon glyphicon-move" aria-hidden="true"></span>
 </td>
 <?php $genTimesTamp = time(); ?>
 <?php foreach ($this->inputs as &$input) : ?>
