--- a/application/views/scripts/index/partials/commissions_bloc.phtml
+++ b/application/views/scripts/index/partials/commissions_bloc.phtml
@@ -1,6 +1,6 @@
 <div id="<?php echo $this->id ?>" class="panel panel-default empty folded">
     <div class="panel-heading">
-        <i class="icon icon-chevron-right"></i>
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         Prochaines commissions (<?= $this->count ?? 0 ?>)
     </div>
     <div class="panel-body" style="display:none">
