--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -51,7 +51,7 @@
         <td>
             <?php if($this->verrou != 1 && !in_array($pj['NOM_STATUT'], ['to_be_exported', 'exported'])): ?>
                 <a class='delete' href='/piece-jointe/delete?id_pj=<?php echo $pj["ID_PIECEJOINTE"] ?>&type=<?php echo $this->type ?>&id=<?php echo $this->id ?>'>
-                    <i class="icon-trash"></i>
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                 </a>
             <?php endif ?>
         </td>
