--- a/application/layouts/includes/nav-main.phtml
+++ b/application/layouts/includes/nav-main.phtml
@@ -1,57 +1,58 @@
-<div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container-fluid">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+<div class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="/"><img src='/images/layout-header-logo.png' alt='Prevarisc'  /></a>
-            <div class="nav-collapse collapse">
-                <ul class='nav'>
-                    <li><a href='/'><span class="glyphicon glyphicon-home grey-icn-plus" aria-hidden="true" title="Accueil"></span></a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Établissements
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href='/search/etablissement?label=&page=1'><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Rechercher</a></li>
-                            <li><a href='/etablissement/add'><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Ajouter</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Dossiers
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href='/search/dossier?objet=&page=1'><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>  Rechercher</a></li>
-                            <li><a href='/dossier/add'><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>  Ajouter</a></li>
-                        </ul>
-                    </li>
-                    <li><a href='/calendrier-des-commissions'>Calendrier</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <span class="glyphicon glyphicon-plus grey-icn-plus" aria-hidden="true" title="Plus"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href='/statistiques'>Statistiques</a></li>
-                            <li><a href='/admin'>Administration</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class='nav pull-right'>
-                    <li class="li-searched">
-                        <form class="navbar-search" action="/search/etablissement" method="get">
-                            <div class="input-append" id="research-input">
-                                <input name="label" class="input-medium" id="nav-main-search-field" type="text" placeholder="Rechercher ..." style='margin-top: 10px' />
-                                <input name="page" type="hidden" value="1"  />
-                                <button class="btn btn_search" type="submit" style='margin-top: 10px'><span class="glyphicon glyphicon-search" aria-hidden="true"></span> </button>
-                                <a class="btn" href="/search/etablissement?&statuts%5B%5D=2&statuts%5B%5D=4" >Avancée »</a>
-                            </div>
-                        </form>
-                    </li>
-                </ul>
-            </div>
+            </button>
+            <a class="navbar-brand" href="/"><img src='/images/layout-header-logo.png' alt='Prevarisc' /></a>
+        </div>
+        <div id="main-navbar" class="collapse navbar-collapse">
+            <ul class='nav navbar-nav'>
+                <li><a href='/'><span class="glyphicon glyphicon-home grey-icn-plus" aria-hidden="true" title="Accueil"></span></a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        Établissements <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href='/search/etablissement?label=&page=1'><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> Rechercher</a></li>
+                        <li><a href='/etablissement/add'><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Ajouter</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        Dossiers <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href='/search/dossier?objet=&page=1'><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>  Rechercher</a></li>
+                        <li><a href='/dossier/add'><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>  Ajouter</a></li>
+                    </ul>
+                </li>
+                <li><a href='/calendrier-des-commissions'>Calendrier</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-plus grey-icn-plus" aria-hidden="true" title="Plus"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href='/statistiques'>Statistiques</a></li>
+                        <li><a href='/admin'>Administration</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class='nav navbar-nav navbar-right'>
+                <li class="li-searched">
+                    <form class="navbar-search" action="/search/etablissement" method="get">
+                        <div class="input-append" id="research-input">
+                            <input name="label" class="input-medium" id="nav-main-search-field" type="text" placeholder="Rechercher ..." />
+                            <input name="page" type="hidden" value="1"  />
+                            <button class="btn btn_search" type="submit"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> </button>
+                            <a class="btn" href="/search/etablissement?&statuts%5B%5D=2&statuts%5B%5D=4" >Avancée »</a>
+                        </div>
+                    </form>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
