--- a/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
@@ -6,7 +6,7 @@
     </li>
     <li class="nav-header">Actions</li>
     <li>
-        <a id='exportCom' href='/calendrier-des-commissions/exportoutlook/dateCommId/<?php echo $this->infosDateComm['ID_DATECOMMISSION']; ?>' ><em class='icon-calendar'></em> Exporter pour Outlook</a>
+        <a id='exportCom' href='/calendrier-des-commissions/exportoutlook/dateCommId/<?php echo $this->infosDateComm['ID_DATECOMMISSION']; ?>' ><span class='glyphicon glyphicon-calendar' aria-hidden='true'></span> Exporter pour Outlook</a>
     </li>
     <li>
         <a href="#" id='createConvoc'><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Générer Convocations</a>
