--- a/application/views/scripts/formulaire/partials/tableau/partial-input-tableau.phtml
+++ b/application/views/scripts/formulaire/partials/tableau/partial-input-tableau.phtml
@@ -17,5 +17,5 @@
     </td>
 <?php endforeach ?>
 <td>
-    <button type='button' class='deleteRow btn btn-danger'><i class='icon-trash'></i></button>
+    <button type='button' class='deleteRow btn btn-danger'><span class='glyphicon glyphicon-trash' aria-hidden='true'></span></button>
 </td>
