--- a/application/views/scripts/formulaire/partials/tableau/partial-tableau.phtml
+++ b/application/views/scripts/formulaire/partials/tableau/partial-tableau.phtml
@@ -19,7 +19,7 @@
         <?php endforeach ?>
         <?php if ($this->canWrite): ?>
             <td>
-                <button type='button' class='deleteRow btn btn-danger'><i class='icon-trash'></i></button>
+                <button type='button' class='deleteRow btn btn-danger'><span class='glyphicon glyphicon-trash' aria-hidden='true'></span></button>
             </td>
         <?php endif ?>
     </tr>
