--- a/application/views/scripts/gestion-prescriptions/gestion-rappel-reg.phtml
+++ b/application/views/scripts/gestion-prescriptions/gestion-rappel-reg.phtml
@@ -2,7 +2,7 @@
 	echo "
 		<div class='row'>
 			<div class='span9' >
-				<a href='/gestion-prescriptions'>Gestion des prescriptions types</a> <i class='icon-chevron-right'></i> Gestion des rappels réglementaires
+				<a href='/gestion-prescriptions'>Gestion des prescriptions types</a> <span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span> Gestion des rappels réglementaires
 			</div>
 			<div class='span3' style='float:right;'>
 				
@@ -13,7 +13,7 @@
 		</h3>
 		<div class='row'>
 			<div class='span12' style='text-align:right;'>
-				<a class='btn btn-default' href='/gestion-prescriptions/gestion-rappel-reg-add'><i class='icon-plus'></i>&nbsp;Ajouter une prescription</a>
+				<a class='btn btn-default' href='/gestion-prescriptions/gestion-rappel-reg-add'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;Ajouter une prescription</a>
 			</div>
 		</div>
 		<br/>
