--- a/application/views/scripts/gestion-prescriptions/prescription-form.phtml
+++ b/application/views/scripts/gestion-prescriptions/prescription-form.phtml
@@ -7,8 +7,8 @@ echo "
 	<input type='hidden' name='idPrescription' id='idPrescription' value='".$this->idPrescription."' />
 	<div class='row'>
 				<div class='span12' >
-					<a href='/gestion-prescriptions'>Gestion des prescriptions types</a> <i class='icon-chevron-right'></i> <a href='/gestion-prescriptions/gestion-rappel-reg'>Gestion rappels réglementaires</a>
-					<i class='icon-chevron-right'></i>
+					<a href='/gestion-prescriptions'>Gestion des prescriptions types</a> <span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span> <a href='/gestion-prescriptions/gestion-rappel-reg'>Gestion rappels réglementaires</a>
+					<span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span>
 	";
 	if($this->action == 'add'){
 		echo "Ajout d'un nouveau rappel réglementaire";
