--- a/application/views/scripts/index/partials/odj_bloc.phtml
+++ b/application/views/scripts/index/partials/odj_bloc.phtml
@@ -2,7 +2,7 @@
   <div class="panel-heading">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     Ordre du jour des prochaines commissions
-    <?= $this->title.' ('.($this->count ?? 0).')' ?>
+    <?= $this->title ?> <span class="badge"><?= $this->count ?? 0 ?></span>
 
   </div>
   <div class="panel-body" style="font-size: .85em;display:none">
