--- a/application/views/scripts/dossier/descriptif.phtml
+++ b/application/views/scripts/dossier/descriptif.phtml
@@ -15,9 +15,9 @@
     $action = $this->do;
     echo "  
         <div id='boutons' style='float: right'>
-            <button id='modificationDossier' class='btn' style='".( ($action == 'new' || $this->infosDossier['VERROU_DOSSIER'] == 1)? "display:none;" : "" )."'><i class='icon-pencil'></i>&nbsp;Modifier</button>
+            <button id='modificationDossier' class='btn' style='".( ($action == 'new' || $this->infosDossier['VERROU_DOSSIER'] == 1)? "display:none;" : "" )."'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
             <button id='annulModification' class='btn' style='".( ($action == 'new' || $action == 'edit')? "display:none;" : "" )." z-index:150;'>Annuler</button>
-            <button id='validModification' class='save btn btn-success' style='".( ($action == 'new' || $action == 'edit')? "display:none;" : "" )." z-index:150;'><i class='icon-ok icon-white'></i>&nbsp;Sauvegarder</button>
+            <button id='validModification' class='save btn btn-success' style='".( ($action == 'new' || $action == 'edit')? "display:none;" : "" )." z-index:150;'><span class='glyphicon glyphicon-ok' aria-hidden='true'></span>&nbsp;Sauvegarder</button>
             <div id='chargement'></div>
     </div>"
     ?>
