--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -1420,7 +1420,7 @@ $(".delaipresc").live('click', function() {
                                 null === $this->dateAvis
                             ): ?>
                             <a id="retry-export-pec" href="#" title="Renvoyer la prise en compte métier" data-id="<?= $this->id_platau ?>">
-                                <i class='icon-repeat icon-black'></i>
+                                <span class='glyphicon glyphicon-repeat' aria-hidden='true'></span>
                             </a>
                         <?php endif ?>
                     </div>
@@ -1449,7 +1449,7 @@ $(".delaipresc").live('click', function() {
 
                         <?php if ($this->enumStatutsAvis::TRAITE === $this->statutAvis): ?>
                             <a id="retry-export-avis" href="#" title="Renvoyer l'avis" data-id="<?= $this->id_platau ?>">
-                                <i class='icon-repeat icon-black'></i>
+                                <span class='glyphicon glyphicon-repeat' aria-hidden='true'></span>
                             </a>
                         <?php endif ?>
                     </div>
@@ -1519,8 +1519,8 @@ $(".delaipresc").live('click', function() {
                 <div class='right form span9' <?php echo ($action != 'new') ? "style='display:none;'" : "" ?>>
                     <input type='text' class='date' name='DATEINSERT_DOSSIER' id='DATEINSERT_INPUT'
                         value='<?php echo ($this->DATEINSERT_INPUT) ? $this->DATEINSERT_INPUT : "" ?>' />
-                    &nbsp;<button class='today btn'><i class='icon-calendar'
-                            aria-hidden='true'></i>&nbsp;Aujourd'hui</button>
+                    &nbsp;<button class='today btn'><span class='glyphicon glyphicon-calendar'
+                            aria-hidden='true'></span>&nbsp;Aujourd'hui</button>
                 </div>
             </li>
             <li class='row-fluid' id='OBJET'
@@ -1569,7 +1569,7 @@ $(".delaipresc").live('click', function() {
                             <?php echo ($action != 'new') ? "style='display:none;'" : "" ?> />
                         &nbsp;<button id='addNumDoc' class='btn'
                             <?php echo ($action != 'new') ? "style='display:none;'" : "" ?>>
-                            <i class='icon-plus' aria-hidden='true'></i>&nbsp;Ajouter le numéro de document d'urbanisme
+                            <span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;Ajouter le numéro de document d'urbanisme
                         </button>
                         <?php if ($action != 'new') :
                             foreach ($this->dossierDocUrba as $docUrba) : ?>
@@ -1596,8 +1596,8 @@ $(".delaipresc").live('click', function() {
                     <div>
                         <input type='text' class='date' name='DATEMAIRIE_DOSSIER' id='DATEMAIRIE_INPUT'
                             value='<?php echo ($this->DATEMAIRIE_INPUT) ? $this->DATEMAIRIE_INPUT : "" ?>' />
-                        &nbsp;<button class='today btn'><i class='icon-calendar'
-                                aria-hidden='true'></i>&nbsp;Aujourd'hui</button>
+                        &nbsp;<button class='today btn'><span class='glyphicon glyphicon-calendar'
+                                aria-hidden='true'></span>&nbsp;Aujourd'hui</button>
                     </div>
                 </div>
             </li>
@@ -1610,8 +1610,8 @@ $(".delaipresc").live('click', function() {
                 <div class='right form span9' <?php echo ($action != 'new') ? "style='display:none;'" : "" ?>>
                     <input type='text' class='date' name='DATESECRETARIAT_DOSSIER' id='DATESECRETARIAT_INPUT'
                         value='<?php echo ($this->DATESECRETARIAT_INPUT) ? $this->DATESECRETARIAT_INPUT : "" ?>' />
-                    &nbsp;<button class='today btn'><i class='icon-calendar'
-                            aria-hidden='true'></i>&nbsp;Aujourd'hui</button>
+                    &nbsp;<button class='today btn'><span class='glyphicon glyphicon-calendar'
+                            aria-hidden='true'></span>&nbsp;Aujourd'hui</button>
                 </div>
             </li>
 
@@ -1624,8 +1624,8 @@ $(".delaipresc").live('click', function() {
                 <div class='right form span9' <?php echo ($action != 'new') ? "style='display:none;'" : "" ?>>
                     <input type='text' class='date' name='DATEENVTRANSIT_DOSSIER' id='DATEENVTRANSIT_INPUT'
                         value='<?php echo ($this->DATEENVTRANSIT_INPUT) ? $this->DATEENVTRANSIT_INPUT : "" ?>' />
-                    &nbsp;<button class='today btn'><i class='icon-calendar'
-                            aria-hidden='true'></i>&nbsp;Aujourd'hui</button>
+                    &nbsp;<button class='today btn'><span class='glyphicon glyphicon-calendar'
+                            aria-hidden='true'></span>&nbsp;Aujourd'hui</button>
                 </div>
             </li>
 
@@ -1638,8 +1638,8 @@ $(".delaipresc").live('click', function() {
                 <div class='right form span9' <?php echo ($action != 'new') ? "style='display:none;'" : "" ?>>
                     <input type='text' class='date' id='DATESDIS_INPUT' name='DATESDIS_DOSSIER'
                         value='<?php echo ($this->DATESDIS_INPUT) ? $this->DATESDIS_INPUT : "" ?>' />
-                    &nbsp;<button class='today btn'><i class='icon-calendar'
-                            aria-hidden='true'></i>&nbsp;Aujourd'hui</button>
+                    &nbsp;<button class='today btn'><span class='glyphicon glyphicon-calendar'
+                            aria-hidden='true'></span>&nbsp;Aujourd'hui</button>
                 </div>
             </li>
             <li class='row-fluid' id='SERVICEINSTRUC'
@@ -1685,7 +1685,7 @@ $(".delaipresc").live('click', function() {
                     </select>
                     <button class='changeCommission btn'
                         <?php echo ('new' == $action || '' == $this->commissionInfos['ID_COMMISSION']) ? "style='display:none;'" : "" ?>>
-                        <i class='icon-remove' aria-hidden='true'></i>&nbsp;Choisir une autre commission
+                        <span class='glyphicon glyphicon-remove' aria-hidden='true'></span>&nbsp;Choisir une autre commission
                     </button>
                 </div>
             </li>
@@ -1704,11 +1704,11 @@ $(".delaipresc").live('click', function() {
 						le bouton est toujours visible -->
                     <button id='showVisite' class='showCalendar btn'
                         <?php echo ('new' == $action || '' == $this->commissionInfos['ID_COMMISSION']) ? "style='display:none;'" : "" ?>>
-                        <i class='icon-chevron-down' aria-hidden='true'></i>&nbsp;Afficher le calendrier
+                        <span class='glyphicon glyphicon-chevron-down' aria-hidden='true'></span>&nbsp;Afficher le calendrier
                     </button>
                     <button id='hideVisite' class='hideCalendar btn'
                         <?php echo ('new' == $action || '' == $this->commissionInfos['ID_COMMISSION']) ? "style='display:none;'" : "" ?>>
-                        <i class='icon-chevron-up' aria-hidden='true'></i>&nbsp;Cacher le calendrier
+                        <span class='glyphicon glyphicon-chevron-up' aria-hidden='true'></span>&nbsp;Cacher le calendrier
                     </button>
                     Afficher
                     <select id='month_visite' style='width:110px;'>
@@ -1751,7 +1751,7 @@ $(".delaipresc").live('click', function() {
                         value='<?php echo ($this->DATERVRAT_INPUT) ? $this->DATERVRAT_INPUT : "" ?>' />
                     &nbsp;
                     <button class='today btn'>
-                        <i class='icon-calendar' aria-hidden='true'></i>&nbsp;Aujourd'hui
+                        <span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>&nbsp;Aujourd'hui
                     </button>
                 </div>
             </li>
@@ -1768,7 +1768,7 @@ $(".delaipresc").live('click', function() {
                     &nbsp;&nbsp;<a
                         href='/calendrier-des-commissions/gestionodj/dateCommId/<?php echo $this->idDateCommissionAffect ?>'
                         title='afficher ordre du jour'>
-                        <i class='icon-calendar' aria-hidden='true'></i>
+                        <span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>
                     </a>
                     <?php endif ?>
                 </div>
@@ -1781,11 +1781,11 @@ $(".delaipresc").live('click', function() {
                         value='<?php echo ($this->dateCommInput) ? $this->dateCommInput : "" ?>' />
                     <button id='showCommission' class='showCalendar btn'
                         <?php echo ('new' == $action || '' == $this->commissionInfos['ID_COMMISSION']) ? "style='display:none;'" : "" ?>>
-                        <i class='icon-chevron-down' aria-hidden='true'></i>&nbsp;Afficher le calendrier
+                        <span class='glyphicon glyphicon-chevron-down' aria-hidden='true'></span>&nbsp;Afficher le calendrier
                     </button>
                     <button id='hideCommission' class='hideCalendar btn'
                         <?php echo ('new' == $action || '' == $this->commissionInfos['ID_COMMISSION']) ? "style='display:none;'" : "" ?>>
-                        <i class='icon-chevron-up' aria-hidden='true'></i>&nbsp;Cacher le calendrier
+                        <span class='glyphicon glyphicon-chevron-up' aria-hidden='true'></span>&nbsp;Cacher le calendrier
                     </button>
                     Afficher
                     <select id='month_comm' style='width:110px;'>
@@ -1934,7 +1934,7 @@ $(".delaipresc").live('click', function() {
 
 							<?php if ($cptDocManquant == 1 && $ue['DATE_RECEPTION_DOC'] == null) : ?>
 							<button class='today btn'>
-								<i class='icon-calendar' aria-hidden='true'></i>&nbsp;Aujourd'hui
+								<span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>&nbsp;Aujourd'hui
 							</button>
 							<?php endif ?>
 							<textarea name='docManquant[]' class='docManquant'
@@ -1948,18 +1948,18 @@ $(".delaipresc").live('click', function() {
 							&nbsp;
 							<button class='today btn'
 								<?php echo ($ue['DATE_RECEPTION_DOC'] != '') ? "style='display:none;'" : "" ?>>
-								<i class='icon-calendar' aria-hidden='true'></i>&nbsp;Aujourd'hui
+								<span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>&nbsp;Aujourd'hui
 							</button>
 							&nbsp;&nbsp;&nbsp;
 							<button class='btn validDocManquant'
 								<?php echo ($ue['DATE_RECEPTION_DOC'] != '') ? "style='display:none;'" : "" ?>>
-								<i class='icon-lock' aria-hidden='true'></i>&nbsp;Valider la reception de document
+								<span class='glyphicon glyphicon-lock' aria-hidden='true'></span>&nbsp;Valider la reception de document
 							</button>
 							&nbsp;&nbsp;&nbsp;
 							<span
 								<?php echo ($ue['DATE_RECEPTION_DOC'] != null && $cptDocManquant == 1) ? "" : "style='display:none;'" ?>>
 								<button class='cancelDateRecep btn'>
-									<i class='icon-remove' aria-hidden='true'></i>&nbsp;Modifier
+									<span class='glyphicon glyphicon-remove' aria-hidden='true'></span>&nbsp;Modifier
 								</button>
 							</span>
 							<br /><br />
@@ -2104,7 +2104,7 @@ $(".delaipresc").live('click', function() {
                             value='<?php echo ($this->DELAIPRESC_INPUT) ? $this->DELAIPRESC_INPUT : "" ?>' />
                         &nbsp;
                         <button class='today btn'>
-                            <i class='icon-calendar' aria-hidden='true'></i>&nbsp;Aujourd'hui
+                            <span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>&nbsp;Aujourd'hui
                         </button>
                     </span>
                 </div>
@@ -2254,7 +2254,7 @@ $(".delaipresc").live('click', function() {
                         value='<?php echo ($this->DATEPREF_INPUT) ? $this->DATEPREF_INPUT : "" ?>' />
                     &nbsp;
                     <button class='today btn'>
-                        <i class='icon-calendar' aria-hidden='true'></i>&nbsp;Aujourd'hui
+                        <span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>&nbsp;Aujourd'hui
                     </button>
                 </div>
             </li>
@@ -2269,7 +2269,7 @@ $(".delaipresc").live('click', function() {
                         value='<?php echo ($this->DATEREP_INPUT) ? $this->DATEREP_INPUT : "" ?>' />
                     &nbsp;
                     <button class='today btn'>
-                        <i class='icon-calendar' aria-hidden='true'></i>&nbsp;Aujourd'hui
+                        <span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>&nbsp;Aujourd'hui
                     </button>
                 </div>
             </li>
@@ -2290,7 +2290,7 @@ $(".delaipresc").live('click', function() {
                         value='<?php echo $dateTransfertComm ?>' />
                     &nbsp;
                     <button class='today btn'>
-                        <i class='icon-calendar' aria-hidden='true'></i>&nbsp;Aujourd'hui
+                        <span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>&nbsp;Aujourd'hui
                     </button>
                 </div>
             </li>
@@ -2311,7 +2311,7 @@ $(".delaipresc").live('click', function() {
                         value='<?php echo $dateReceptTemp ?>' />
                     &nbsp;
                     <button class='today btn'>
-                        <i class='icon-calendar' aria-hidden='true'></i>&nbsp;Aujourd'hui
+                        <span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>&nbsp;Aujourd'hui
                     </button>
                 </div>
             </li>
@@ -2326,7 +2326,7 @@ $(".delaipresc").live('click', function() {
                         value='<?php echo ($this->DATEREUN_INPUT) ? $this->DATEREUN_INPUT : "" ?>' />
                     &nbsp;
                     <button class='today btn'>
-                        <i class='icon-calendar' aria-hidden='true'></i>&nbsp;Aujourd'hui
+                        <span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>&nbsp;Aujourd'hui
                     </button>
                 </div>
             </li>
@@ -2460,7 +2460,7 @@ $(".delaipresc").live('click', function() {
                         value='<?php echo ($this->DATESIGN_INPUT) ? $this->DATESIGN_INPUT : "" ?>' />
                     &nbsp;
                     <button class='today btn'>
-                        <i class='icon-calendar' aria-hidden='true'></i>&nbsp;Aujourd'hui
+                        <span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>&nbsp;Aujourd'hui
                     </button>
                 </div>
             </li>
