--- a/application/views/scripts/formulaire/edit-champ.phtml
+++ b/application/views/scripts/formulaire/edit-champ.phtml
@@ -200,10 +200,10 @@ endif ?>
                             <td id='actions'>
                                 <div class='text-center'>
                                     <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-champ', 'rubrique' => $this->rubrique['ID_RUBRIQUE'], 'champ' => $champ['ID_CHAMP']], null, true) ?>">
-                                        <i title='Modifier' class='icon-pencil'></i>
+                                        <span title='Modifier' class='glyphicon glyphicon-pencil' aria-hidden='true'></span>
                                     </a>
                                     <button data-id="<?= $champ['ID_CHAMP'] ?>" data-rubrique-id="<?= $this->rubrique['ID_RUBRIQUE'] ?>" data-id-parent="<?= $champ['ID_PARENT'] ?>" data-nom="<?= $champ['NOM'] ?>" class="btn btn-link delete-champ">
-                                        <i title='Supprimer' class='icon-trash'></i>
+                                        <i title='Supprimer' class='glyphicon glyphicon-trash' aria-hidden='true'></i>
                                     </button>
                                 </div>
                             </td>
