--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -61,10 +61,10 @@
                                         <td id='actions'>
                                             <div class='text-center'>
                                                 <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-rubrique', 'rubrique' => $rubrique['ID_RUBRIQUE']], null, true) ?>">
-                                                    <i title='Modifier' class='icon-pencil'></i>
+                                                    <span title='Modifier' class='glyphicon glyphicon-pencil' aria-hidden='true'></span>
                                                 </a>
                                                 <button data-id="<?= $rubrique['ID_RUBRIQUE'] ?>" data-nom="<?= $rubrique['NOM'] ?>" class="btn btn-link delete-rubrique">
-                                                    <i title='Supprimer' class='icon-trash'></i>
+                                                    <i title='Supprimer' class='glyphicon glyphicon-trash' aria-hidden='true'></i>
                                                 </button>
                                             </div>
                                         </td>
