--- a/application/views/scripts/gestion-prescriptions/gestion-articles-replace.phtml
+++ b/application/views/scripts/gestion-prescriptions/gestion-articles-replace.phtml
@@ -6,11 +6,11 @@
 			<div class='row'>
 				<div class='span12' >
 					<a href='/gestion-prescriptions'>Gestion des prescriptions types</a>
-					<i class='icon-chevron-right'></i>
+					<span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span>
 					<a href='/gestion-prescriptions/gestion-articles'>Gestion des articles</a>
-					<i class='icon-chevron-right'></i>
+					<span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span>
 					<a href='/gestion-prescriptions/gestion-articles-edit/id/".$this->articleInfo['ID_ARTICLE']."'>Retour à la modification</a>
-					<i class='icon-chevron-right'></i>
+					<span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span>
 					Remplacer et supprimer un article existant
 				</div>
 			</div>
@@ -72,7 +72,7 @@
 				<div class='span6'>
 				</div>
 				<div class='span6' style='text-align:right;'>
-					<span style='color:red;'><i class='icon-exclamation-sign'></i>&nbsp;Cette action est irréversible</span>
+					<span style='color:red;'><span class='glyphicon glyphicon-exclamation-sign' aria-hidden='true'></span>&nbsp;Cette action est irréversible</span>
 				</div>
 			</div>
 			<div class='row'>
