--- a/application/views/scripts/gestion-prescriptions/gestion-articles.phtml
+++ b/application/views/scripts/gestion-prescriptions/gestion-articles.phtml
@@ -3,7 +3,7 @@
 	echo "
 		<div class='row'>
 			<div class='span9' >
-				<a href='/gestion-prescriptions'>Gestion des prescriptions types</a> <i class='icon-chevron-right'></i> Gestion des articles
+				<a href='/gestion-prescriptions'>Gestion des prescriptions types</a> <span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span> Gestion des articles
 			</div>
 			<div class='span3' style='float:right;'>
 				
@@ -14,7 +14,7 @@
 		</h3>
 		<div class='row'>
 			<div class='span12' style='text-align:right;'>
-				<a class='btn btn-default' href='/gestion-prescriptions/gestion-articles-add'><i class='icon-plus'></i>&nbsp;Ajouter un article</a>
+				<a class='btn btn-default' href='/gestion-prescriptions/gestion-articles-add'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;Ajouter un article</a>
 			</div>
 		</div>
 
@@ -30,7 +30,7 @@
 				<div class='row' >
 					<div class='span2' style='text-align:right;'>
 						".( ($article['VISIBLE_ARTICLE'] == 1 )? "<img src='/images/visible.gif' alt='visible' />" : "<img src='/images/nonvisible.gif' alt='non visible' />")."
-						<a class='btn' href='/gestion-prescriptions/gestion-articles-edit/id/".$article['ID_ARTICLE']."' ><i class='icon-pencil'></i>&nbsp;Modifier</a>
+						<a class='btn' href='/gestion-prescriptions/gestion-articles-edit/id/".$article['ID_ARTICLE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</a>
 					</div>
 					<div class='span10' >".$article['LIBELLE_ARTICLE']."</div>					
 				</div>
