--- a/application/views/scripts/gestion-prescriptions/gestion-textes-edit.phtml
+++ b/application/views/scripts/gestion-prescriptions/gestion-textes-edit.phtml
@@ -5,8 +5,8 @@
 			<input type='hidden' name='action' id='action' value='".$this->action."' />
 			<div class='row'>
 				<div class='span12' >
-					<a href='/gestion-prescriptions'>Gestion des prescriptions types</a> <i class='icon-chevron-right'></i> <a href='/gestion-prescriptions/gestion-textes'>Gestion des textes</a>
-					<i class='icon-chevron-right'></i>
+					<a href='/gestion-prescriptions'>Gestion des prescriptions types</a> <span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span> <a href='/gestion-prescriptions/gestion-textes'>Gestion des textes</a>
+					<span class='glyphicon glyphicon-chevron-right' aria-hidden='true'></span>
 	";
 	if($this->action == 'add'){
 		echo "Ajout d'un nouveau texte";
