--- a/application/views/scripts/gestion-prescriptions/index.phtml
+++ b/application/views/scripts/gestion-prescriptions/index.phtml
@@ -39,7 +39,7 @@
 				<button class='showDetailCat btn' id='showtexte_".$ue['ID_PRESCRIPTION_CAT']."' >Afficher les détails</button>
 				<button class='hideDetailCat btn' id='hidetexte_".$ue['ID_PRESCRIPTION_CAT']."' style='display:none;'>Masquer les détails</button>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<button class='editCategorie btn' id='".$ue['ID_PRESCRIPTION_CAT']."' ><i class='icon-pencil'></i>&nbsp;Modifier</button>
+				<button class='editCategorie btn' id='".$ue['ID_PRESCRIPTION_CAT']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
 				<br/>
 				<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='texte_".$ue['ID_PRESCRIPTION_CAT']."'></div>
 				<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='prescriptionCat_".$ue['ID_PRESCRIPTION_CAT']."'></div>
