--- a/application/views/scripts/gestion-prescriptions/showprescriptionarticle.phtml
+++ b/application/views/scripts/gestion-prescriptions/showprescriptionarticle.phtml
@@ -17,7 +17,7 @@
 				<button class='showDetailArticle btn' id='showDetailArticle_".$ue['ID_PRESCRIPTIONARTICLE']."' >Afficher les détails</button>
 				<button class='hideDetailArticle btn' id='hideDetailArticle_".$ue['ID_PRESCRIPTIONARTICLE']."' style='display:none;'>Masquer les détails</button>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<button class='editArticle btn' id='".$ue['ID_PRESCRIPTIONARTICLE']."' ><i class='icon-pencil'></i>&nbsp;Modifier</button>
+				<button class='editArticle btn' id='".$ue['ID_PRESCRIPTIONARTICLE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
 				<br/>
 				<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='articleDetail_".$ue['ID_PRESCRIPTIONARTICLE']."'></div>
 				<br/>
