--- a/application/views/scripts/gestion-prescriptions/showprescriptiontexte.phtml
+++ b/application/views/scripts/gestion-prescriptions/showprescriptiontexte.phtml
@@ -18,7 +18,7 @@
 				<button class='showDetailTexte btn' id='showarticle_".$ue['ID_PRESCRIPTIONTEXTE']."' >Afficher les détails</button>
 				<button class='hideDetailTexte btn' id='hidearticle_".$ue['ID_PRESCRIPTIONTEXTE']."' style='display:none;'>Masquer les détails</button>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-				<button class='editTexte btn' id='".$ue['ID_PRESCRIPTIONTEXTE']."' ><i class='icon-pencil'></i>&nbsp;Modifier</button>
+				<button class='editTexte btn' id='".$ue['ID_PRESCRIPTIONTEXTE']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
 				<br/>
 				<div style='margin-left:30px;padding-left:10px;border-left:1px solid black;' id='article_".$ue['ID_PRESCRIPTIONTEXTE']."'></div>
 				<br/>
