--- a/application/views/scripts/gestion-textes-applicables/index.phtml
+++ b/application/views/scripts/gestion-textes-applicables/index.phtml
@@ -1,7 +1,7 @@
 <?php
 echo "
     <h3 class='page-header'>Gestion des textes applicables</h3>
-	<button id='createTexteAppl' class='btn'><i class='icon-plus'></i>&nbsp;Ajouter un texte applicable</button><br/><br/>
+	<button id='createTexteAppl' class='btn'><span class='glyphicon glyphicon-plus' aria-hidden='true'></span>&nbsp;Ajouter un texte applicable</button><br/><br/>
 ";
 
 $idTypeMarq = "";
@@ -26,7 +26,7 @@ foreach($this->listeTextesAppl as $val => $ue){
 	echo "
 		<li class='row-fluid' style='margin-top:15px;margin-bottom:10px;' id='".$ue['ID_TEXTESAPPL']."'>
 			<div class='span10'>".nl2br($ue['LIBELLE_TEXTESAPPL'])."</div>
-			<div class='span1'><button class='editTexteAppl btn' id='".$ue['ID_TEXTESAPPL']."' ><i class='icon-pencil'></i>&nbsp;Editer</button></div>
+			<div class='span1'><button class='editTexteAppl btn' id='".$ue['ID_TEXTESAPPL']."' ><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Editer</button></div>
 			<div class='span1'>".( ($ue['VISIBLE_TEXTESAPPL'] == 1 )? "<img src='/images/visible.gif' alt='visible' />" : "<img src='/images/nonvisible.gif' alt='non visible' />")."</div>
 		</li>
 	";
