--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -109,12 +109,12 @@
             });
         });
 
-        $(".panel-heading .icon").click(function() {
+        $(".panel-heading .glyphicon").click(function() {
             var $self = $(this);
             var $panel = $self.parents('.panel');
             $panel.toggleClass('folded');
-            if ($self.hasClass('icon-chevron-right')) {
-                $self.removeClass('icon-chevron-right').addClass('icon-chevron-down');
+            if ($self.hasClass('glyphicon-chevron-right')) {
+                $self.removeClass('glyphicon-chevron-right').addClass('glyphicon-chevron-down');
                 if ($panel.hasClass('empty') && !$panel.hasClass('loading')) {
                     $panel.find('.panel-body img').show();
                     loadBloc($panel);
@@ -123,7 +123,7 @@
                     $container.packery('fit', $panel.get(0));
                 }
             } else {
-                $self.removeClass('icon-chevron-down').addClass('icon-chevron-right');
+                $self.removeClass('glyphicon-chevron-down').addClass('glyphicon-chevron-right');
                 $panel.find('.panel-body').hide();
                 $container.packery('fit', $panel.get(0));
             }
