--- a/application/views/scripts/index/partials/feeds_bloc.phtml
+++ b/application/views/scripts/index/partials/feeds_bloc.phtml
@@ -1,7 +1,7 @@
 <div id="<?php echo $this->id ?>" class="panel panel-default <?php echo $this->width != 'small' ? 'w2' : '' ?> empty folded">
   <div class="panel-heading">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <?php echo $this->title.' ('.($this->count ?? 0).')' ?>
+    <?= $this->title ?> <span class="badge"><?= $this->count ?? 0 ?></span>
     <a class='btn btn-small pull-right' data-toggle="modal" data-target="#reponse-modal" href='<?php echo $this->url(array('controller' => 'index', 'action' => 'add-message')) ?>'>Ajouter un message</a>
   </div>
   <div class="panel-body" style="display:none">
